--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <!-- Mirrored from html.themebeer.com/trade/..html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 24 Sep 2024 13:01:17 GMT -->
+  <!-- Mirrored from html.themebeer.com/trade/.. by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 24 Sep 2024 13:01:17 GMT -->
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
@@ -103,7 +103,7 @@
                 </button>
 
                 <!-- Logo -->
-                <a class="navbar-brand" href="..html"
+                <a class="navbar-brand" href=".."
                   ><img
                     style="height: 110px; position: relative; bottom: 20px"
                     class="logo"
@@ -122,36 +122,36 @@
                 <!-- Menu -->
                 <ul class="nav navbar-nav trd-menus">
                   <li class="active">
-                    <a href="..html">Home</a>
+                    <a href="..">Home</a>
                     <ul class="trd-dropdown-menu">
                       <li>
-                        <a href="homepage-2.html">Homepage - 2</a>
+                        <a href="homepage-2.">Homepage - 2</a>
                       </li>
                       <li>
-                        <a href="homepage-3.html">Homepage - 3</a>
+                        <a href="homepage-3.">Homepage - 3</a>
                       </li>
                       <li>
-                        <a href="homepage-4.html">Homepage - 4</a>
+                        <a href="homepage-4.">Homepage - 4</a>
                       </li>
                       <li>
-                        <a href="homepage-5.html">Homepage - 5</a>
+                        <a href="homepage-5.">Homepage - 5</a>
                       </li>
                       <li>
-                        <a href="homepage-6.html">Homepage - 6</a>
+                        <a href="homepage-6.">Homepage - 6</a>
                       </li>
                       <li>
-                        <a href="homepage-7.html">Homepage - 7</a>
+                        <a href="homepage-7.">Homepage - 7</a>
                       </li>
                     </ul>
                   </li>
                   <li>
-                    <a href="about-us.html">About</a>
+                    <a href="about-us.">About</a>
                   </li>
                   <li>
-                    <a href="blog.html">Blog</a>
+                    <a href="blog.">Blog</a>
                     <ul class="trd-dropdown-menu">
                       <li>
-                        <a href="blog-details.html">Blog Details</a>
+                        <a href="blog-details.">Blog Details</a>
                       </li>
                     </ul>
                   </li>
@@ -159,27 +159,27 @@
                     <a href="#">Services</a>
                     <ul class="trd-dropdown-menu">
                       <li>
-                        <a href="financial-service.html">Financial Services</a>
+                        <a href="financial-service.">Financial Services</a>
                       </li>
                       <li>
-                        <a href="business-plan.html">Business Plan</a>
+                        <a href="business-plan.">Business Plan</a>
                       </li>
                       <li>
-                        <a href="market-analysis.html">Market Analysis</a>
+                        <a href="market-analysis.">Market Analysis</a>
                       </li>
                       <li>
-                        <a href="marketing.html">Marketting</a>
+                        <a href="marketing.">Marketting</a>
                       </li>
                       <li>
-                        <a href="investment.html">Investment</a>
+                        <a href="investment.">Investment</a>
                       </li>
                       <li>
-                        <a href="consultancy.html">Consultancy</a>
+                        <a href="consultancy.">Consultancy</a>
                       </li>
                     </ul>
                   </li>
                   <li>
-                    <a href="contact-us.html">Contact</a>
+                    <a href="contact-us.">Contact</a>
                   </li>
                 </ul>
                 <!-- End -->
@@ -1021,7 +1021,11 @@
               class="col-md-3 col-sm-6 col-xs-12 trd-footer-widget trd-about-widget"
             >
               <div class="trd-logo-wrapper">
-                <img src="https://i.ibb.co/jzBMRqN/logo.png" alt="Trade" />
+                <img
+                  style="height: 150px; filter: invert(100)"
+                  src="https://i.ibb.co/jzBMRqN/logo.png"
+                  alt="Trade"
+                />
               </div>
 
               <p>
@@ -1172,5 +1176,5 @@
     <!-- <script src="js/scripts.js"></script> -->
   </body>
 
-  <!-- Mirrored from html.themebeer.com/trade/..html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 24 Sep 2024 13:01:17 GMT -->
+  <!-- Mirrored from html.themebeer.com/trade/.. by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 24 Sep 2024 13:01:17 GMT -->
 </html>
